--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -92,17 +92,17 @@
 
 <body>
   <div class="wrap">
-    <h1>Notion ログイン</h1>
+    <h1>Notion Login</h1>
 
-    <label for="token">トークン（secret_…）</label>
+    <label for="token">Token（secret_…）</label>
     <input id="token" type="password" placeholder="secret_xxx…" autocomplete="on" />
 
     <div class="divider"></div>
 
-    <label for="dbid">データベース ID</label>
+    <label for="dbid">Datebase ID</label>
     <input id="dbid" type="text" placeholder="例：abcdef123456…" autocomplete="on" />
 
-    <button onclick="saveAndRedirect()">保存して開始</button>
+    <button onclick="saveAndRedirect()">Save and Start</button>
   </div>
 
   <script>
