--- a/app/templates/scan.html
+++ b/app/templates/scan.html
@@ -117,7 +117,7 @@
       border: none;
       color: white;
       padding: 0.7rem 1.5rem;
-      margin-top: 1.2rem;
+      margin: 2rem auto;
       border-radius: 6px;
       cursor: pointer;
       font-size: 1rem;
