--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Notion Login</title>
-  <link rel="icon" href="/static/isbn192.png" />
+  <link rel="icon" href="/static/ISBN192.png" />
 
   <!--　Fonts　-->
   <link href="https://fonts.googleapis.com/css2?family=DM+Serif+Display&family=Noto+Sans+JP:wght@400;700&display=swap" rel="stylesheet" />
