--- a/app/templates/scan.html
+++ b/app/templates/scan.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>ISBN Scanner</title>
   <link rel="manifest" href="/manifest.json" />
-  <link rel="icon" href="/static/isbn192.png" />
+  <link rel="icon" href="/static/ISBN.png" />
   <meta name="theme-color" content="#F7F3EE" />
 
   <!-- Fonts -->
