--- a/app/templates/scan.html
+++ b/app/templates/scan.html
@@ -4,9 +4,10 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>ISBN Scanner</title>
-  <link rel="manifest" href="/manifest.json" />
-  <link rel="icon" href="/static/ISBN.png" />
-  <meta name="theme-color" content="#F7F3EE" />
+  <link rel="manifest" href="/static/manifest.json" />
+  <link rel="icon" href="/static/icon-192.png" sizes="192x192" />
+  <meta name="theme-color" content="#524A45" />
+
 
   <!-- Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=DM+Serif+Display&family=Noto+Sans+JP&display=swap" rel="stylesheet">
