--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Notion Login</title>
   <link rel="manifest" href="/static/manifest.json" />
-  <link rel="icon" href="/static/icon-192.png" sizes="192x192" />
+  <link rel="icon" href="/static/ISBN192.png" sizes="192x192" />
   <meta name="theme-color" content="#524A45" />
 
 
