--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -4,9 +4,9 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Notion Login</title>
-  
+  <link rel="manifest" href="/static/manifest.json" />
   <link rel="icon" href="/static/ISBN192.png" sizes="192x192" />
-
+  <meta name="theme-color" content="#524A45" />
 
   <!--　Fonts　-->
   <link href="https://fonts.googleapis.com/css2?family=DM+Serif+Display&family=Noto+Sans+JP:wght@400;700&display=swap" rel="stylesheet" />
