--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -6,6 +6,7 @@
   <title>Notion Login</title>
   <link rel="manifest" href="/static/manifest.json" />
   <link rel="icon" href="/static/192.png" sizes="192x192" />
+  <link rel="apple-touch-icon" sizes="180x180" href="/static/apple-touch-icon.png" />
   <meta name="theme-color" content="#524A45" />
 
   <!--　Fonts　-->
