--- a/app/templates/scan.html
+++ b/app/templates/scan.html
@@ -143,7 +143,7 @@
   </style>
 </head>
 <body>
-  <h1>ISBN Scanner</h1>
+  <h1>Inkline</h1>
   <div class="scanner-container">
     <div class="video-wrapper">
       <video id="camera" autoplay playsinline></video>
