--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -95,8 +95,9 @@
 
 <body>
   <div class="wrap">
-    <h1>Notion Login</h1>
+    <h1>Inkline</h1>
 
+    <label>Notion Login<label>
     <label for="token">Token（secret_…）</label>
     <input id="token" type="password" placeholder="secret_xxx…" autocomplete="on" />
 
